--- a/backend/public/css/admin/login.css
+++ b/backend/public/css/admin/login.css
@@ -19,10 +19,8 @@ input {
     padding: 10px 0;
     border-bottom: solid 1px #1abc9c;
     transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #1abc9c 4%);
-    background-position: -340px 0;
     background-size: 340px 100%;
-    background-repeat: no-repeat;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #1abc9c 4%) no-repeat -340px 0;
     color: #0e6252;
 }
 input:focus, input:valid {
