--- a/backend/public/css/student/index.css
+++ b/backend/public/css/student/index.css
@@ -1,37 +1,57 @@
 #search-box {
     width: 50%;
 }
+
 #add {
     order: 1;
     align-self: flex-end;
 }
-#list_student {
+
+#list-student {
+    position: relative;
     order: 2;
     margin-top: 2rem;
     align-self: center;
     width: 100% !important;
 }
+
 nav {
     order: 2;
 }
+
 .pagination {
     justify-content: flex-end;
 }
+
 .page-item.active .page-link {
     background-color: #198754;
     border-color: #198754;
 }
+
 .page-link:hover {
     color: #198754;
 }
+
 .page-link {
     color: #198754;
 }
+
 thead a {
     text-decoration: none;
 }
+
 thead a:hover {
     color: #0d6efd;
+}
+
+#mess {
+    text-align: center;
+}
+
+#msg {
+    text-align: center;
+    position: absolute;
+    width: 100%;
 }
 
 
