#3 List of Students

--- a/backend/public/css/loginStyle.css
+++ b/backend/public/css/loginStyle.css
@@ -93,3 +93,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.pagination {
+    justify-content: center;
+}
